# fast-api-student-lms

./: alembic.ini  main.py  pyproject.toml
api/: courses.py  sections.py  users.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
