[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["sajibahmedb98 <mmaa6560@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.6"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
