[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["sajibahmedb98 <mmaa6560@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.6"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
sqlalchemy-utils = "^0.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
